# i2s_codecs

./: LICENSE  README.md
Firmware/: CMakeLists.txt  README.md  aic3101.c  aic3101.h  audio.c  audio.h  button.c  button.h  freq_chk.py  i2s_fulldup.c  i2s_fulldup.h  led.c  led.h  main.c  main.h  nau88c22.c  nau88c22.h  sgtl5000.c  sgtl5000.h  uda1345.c  uda1345.h  wm8731.c
codec_pmods/: README.md
codec_pmods/nau8822_pmod/: fp-info-cache  nau8822_pmod.kicad_pcb  nau8822_pmod.kicad_prl  nau8822_pmod.kicad_pro  nau8822_pmod.kicad_sch
codec_pmods/sgtl5000_pmod/: sgtl5000_pmod.kicad_pcb  sgtl5000_pmod.kicad_prl  sgtl5000_pmod.kicad_pro  sgtl5000_pmod.kicad_sch
codec_pmods/tlv320aic3101_pmod/: fp-info-cache  tlv320aic3101_pmod.kicad_pcb  tlv320aic3101_pmod.kicad_prl  tlv320aic3101_pmod.kicad_pro  tlv320aic3101_pmod.kicad_sch
codec_pmods/uda1345_pmod/: uda1345_pmod.kicad_pcb  uda1345_pmod.kicad_prl  uda1345_pmod.kicad_pro  uda1345_pmod.kicad_sch
rp2040_i2s_tester/: README.md  fp-info-cache  rp2040_i2s_tester.kicad_pcb  rp2040_i2s_tester.kicad_prl  rp2040_i2s_tester.kicad_pro  rp2040_i2s_tester.kicad_sch
